--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--Código modificado y mejorado, había algunos errores (p.ej. etiquetas repetidas) y también código que costaba de leer.-->
+<!--Código modificado y mejorado, había algunos errores (p.ej. etiquetas repetidas) y también la mayoría de código era difícil de leer.-->
 
 <!DOCTYPE html>
 <html>
