--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--Código modificado y mejorado, había algunos errores (p.ej. etiquetas repetidas) y también la mayoría de código era difícil de leer.-->
+<!--Código modificado y mejorado, había algunos errores (p.ej. etiquetas repetidas) y también la mayoría de código era difícil de leer. Además, he considerado que los id y las clases estaban bien nombrados, así que no he cambiado nada de eso.-->
 
 <!DOCTYPE html>
 <html>
